# AmalgamEngine

./: .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
Source/: CMakeLists.txt
Source/AccountServer/: CMakeLists.txt
Source/AccountServer/Config/: CMakeLists.txt
Source/AccountServer/Config/Public/: Config.h
Source/AccountServer/DataModel/: CMakeLists.txt
Source/AccountServer/DataModel/Private/: DataModel.cpp  Database.cpp
Source/AccountServer/DataModel/Public/: Account.h  DataModel.h  Database.h
Source/AccountServer/Launch/: CMakeLists.txt
Source/AccountServer/Launch/Private/: Application.cpp  main.cpp
Source/AccountServer/Launch/Public/: Application.h
Source/AccountServer/Network/: CMakeLists.txt
Source/AccountServer/Network/Private/: Client.cpp  ClientHandler.cpp  ClientManager.cpp  MessageProcessor.cpp
Source/AccountServer/Network/Public/: Client.h  ClientHandler.h  ClientManager.h  MessageProcessor.h
Source/Client/: CMakeLists.txt
Source/Client/Config/: CMakeLists.txt
Source/Client/Config/Private/: Config.cpp
Source/Client/Config/Public/: Config.h
Source/Client/Game/: CMakeLists.txt
Source/Client/Game/Private/: Character.cpp  CharacterManager.cpp  Game.cpp  GameManager.cpp  MovementSystem.cpp  NetworkMovementSystem.cpp  NetworkOutputSystem.cpp  NetworkUpdateSystem.cpp  NpcMovementSystem.cpp  Object.cpp  ObjectManager.cpp  PlayerCharacter.cpp  PlayerInputSystem.cpp  PlayerMovementSystem.cpp  RenderSystem.cpp  Tile.cpp  TileManager.cpp  World.cpp
Source/Client/Game/Public/: Character.h  CharacterManager.h  Game.h  GameManager.h  MovementSystem.h  NetworkMovementSystem.h  NetworkOutputSystem.h  NetworkUpdateSystem.h  NpcMovementSystem.h  Object.h  ObjectManager.h  PlayerCharacter.h  PlayerData.h  PlayerInputSystem.h  PlayerMovementSystem.h  PlayerState.h  RenderSystem.h  Tile.h  TileManager.h  World.h
Source/Client/Graphics/: CMakeLists.txt
Source/Client/Graphics/Private/: AssetManager.cpp  IsoHelpers.cpp  RenderManager.cpp  Renderer.cpp  Sprite.cpp
Source/Client/Graphics/Public/: AssetManager.h  IsoHelpers.h  RenderManager.h  Renderer.h  ScreenPoint.h  Sprite.h
Source/Client/Launch/: CMakeLists.txt
Source/Client/Launch/Private/: Application.cpp  Launch.cpp  main.cpp
Source/Client/Launch/Public/: Application.h
Source/Client/Network/: CMakeLists.txt
Source/Client/Network/Private/: MessageHandler.cpp  MessageProcessor.cpp  Network.cpp
Source/Client/Network/Public/: ClientNetworkDefs.h  MessageHandler.h  MessageProcessor.h  Network.h
Source/Client/Renderer/: CMakeLists.txt
Source/Client/Renderer/Private/: IsoHelpers.cpp  (+2 more)
Source/Client/Sim/: CMakeLists.txt
Source/Client/Simulation/: CMakeLists.txt
Source/Client/UserInterface/: CMakeLists.txt
Source/Client/Utility/: CMakeLists.txt
Source/ClientLib/: CMakeLists.txt
Source/ClientLib/Config/: CMakeLists.txt
Source/ClientLib/Launch/: CMakeLists.txt
Source/ClientLib/Network/: CMakeLists.txt
Source/ClientLib/Renderer/: CMakeLists.txt
Source/ClientLib/Simulation/: CMakeLists.txt
Source/ClientLib/UserInterface/: CMakeLists.txt
Source/ClientLib/Utility/: CMakeLists.txt
Source/EngineSupplementExamples/: README.md
Source/ResourceImporter/: CMakeLists.txt
Source/ResourceImporter/Config/: CMakeLists.txt
Source/ResourceImporter/DataModel/: CMakeLists.txt
Source/ResourceImporter/Launch/: CMakeLists.txt
Source/ResourceImporter/Renderer/: CMakeLists.txt
Source/ResourceImporter/UserInterface/: CMakeLists.txt
Source/ResourceImporter/Utility/: CMakeLists.txt
Source/Server/: CMakeLists.txt
Source/Server/Config/: CMakeLists.txt
Source/Server/Game/: CMakeLists.txt
Source/Server/Launch/: CMakeLists.txt
Source/Server/Network/: CMakeLists.txt
Source/Server/Sim/: CMakeLists.txt
Source/Server/Simulation/: CMakeLists.txt
Source/Server/Utility/: CMakeLists.txt  README.md
Source/ServerLib/: CMakeLists.txt
Source/ServerLib/Config/: CMakeLists.txt
Source/ServerLib/Launch/: CMakeLists.txt
Source/ServerLib/Network/: CMakeLists.txt
Source/ServerLib/Simulation/: CMakeLists.txt
Source/ServerLib/Utility/: CMakeLists.txt
Source/Shared/: CMakeLists.txt
Source/Shared/Components/: CMakeLists.txt
Source/Shared/Config/: CMakeLists.txt
Source/Shared/FlatbufferSchemas/: Message.fbs  README.md
Source/Shared/Messages/: CMakeLists.txt
Source/Shared/Network/: CMakeLists.txt
Source/Shared/Private/: Acceptor.cpp  Debug.cpp  MessageUtil.cpp  MovementHelpers.cpp  NetworkHelpers.cpp  Peer.cpp  SocketSet.cpp  Timer.cpp  pch.h
Source/Shared/Public/: AMStructs.h  Acceptor.h  Debug.h  GameDefs.h  InputComponent.h  MessageUtil.h  Message_generated.h  MovementComponent.h  MovementHelpers.h  NWStructs.h  NetworkDefs.h  NetworkHelpers.h  Peer.h  PositionComponent.h  SharedDefs.h  SocketSet.h  SpriteComponent.h  TcpSocket.h  Timer.h
Source/Shared/Renderer/: CMakeLists.txt
Source/Shared/Sim/: CMakeLists.txt
Source/Shared/Simulation/: CMakeLists.txt
Source/Shared/Utility/: CMakeLists.txt
Source/SharedLib/: CMakeLists.txt
Source/SharedLib/Config/: CMakeLists.txt
Source/SharedLib/Messages/: CMakeLists.txt
Source/SharedLib/Network/: CMakeLists.txt
Source/SharedLib/Renderer/: CMakeLists.txt
Source/SharedLib/Simulation/: CMakeLists.txt
Source/SharedLib/Utility/: CMakeLists.txt
Source/SpriteEditor/: CMakeLists.txt
Source/SpriteEditor/Config/: CMakeLists.txt  Config.json
Source/SpriteEditor/DataModel/: CMakeLists.txt
Source/SpriteEditor/Launch/: CMakeLists.txt
Source/SpriteEditor/Renderer/: CMakeLists.txt
Source/SpriteEditor/UserInterface/: CMakeLists.txt
Source/Tests/: CMakeLists.txt
Source/Tests/NetworkTests/: CMakeLists.txt
Source/Tests/Private/: TestMain.cpp  TestMessageSorter.cpp
Source/Tests/TestApps/: CMakeLists.txt
Source/Tests/TestSandboxes/: CMakeLists.txt
Source/Tests/UnitTests/: CMakeLists.txt
Source/Tools/: CMakeLists.txt
Source/Tools/EngineDatabaseMigrator/: CMakeLists.txt
Source/Tools/MapGenerator/: CMakeLists.txt
(+1374 files in other folders)
